fix display issue with Firefox for FB share

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -289,3 +289,8 @@ input {
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
   text-decoration: none;
 }
+
+.fb-share-button {
+  width: 90px !important;
+  height: 20px !important;
+}
