fix display issue with Firefox for FB share oops

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -290,7 +290,7 @@ input {
   text-decoration: none;
 }
 
-.fb-share-button {
+.fb-share-button iframe {
   width: 90px !important;
   height: 20px !important;
 }
